[package]
name = "egui-ash"
version = "0.4.0"
authors = ["ORITO Itsuki <orito.itsuki@gmail.com>"]
description = "egui integration for ash (Vulkan)."
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MatchaChoco010/egui-ash"
readme = "README.md"
documentation = "https://docs.rs/egui-ash"
repository = "https://github.com/MatchaChoco010/egui-ash"
categories = ["gui"]
keywords = ["gui", "egui", "ash", "vulkan", "winit"]
include = [
  "/LICENSE-*",
  "/src/*.rs",
  "/src/shaders/spv/*.spv",
  "/Cargo.toml",
]

[features]
default = ["egui-winit/default"]
gpu-allocator = [ "dep:gpu-allocator" ]
persistence = [
  "egui/persistence",
  "egui-winit/serde",
  "directories-next",
  "dep:serde",
  "ron",
]

## Underlying egui-winit features
accesskit = ["egui-winit/accesskit"]
android-game-activity = ["egui-winit/android-game-activity"]
android-native-activity = ["egui-winit/android-native-activity"]
bytemuck = ["egui-winit/bytemuck"]
clipboard = ["egui-winit/clipboard"]
links = ["egui-winit/links"]
serde = ["egui-winit/serde"]
wayland = ["egui-winit/wayland"]
x11 = ["egui-winit/x11"]

[dependencies]
anyhow = "1.0.102"
ash = { version = "0.38.0", default-features = false }
ash-window = "0.13.0"
bytemuck = "1.25.0"
directories-next = { version = "2.0.0", optional = true }
egui = "0.33.3"
egui-winit = "0.33.3"
gpu-allocator = { version = "0.27.0", default-features = false, features = ["vulkan"], optional = true }
log = "0.4.29"
raw-window-handle = "0.6.2"
ron = { version = "0.10.1", optional = true }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug"] }
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-ash = { path = ".", features = ["gpu-allocator", "persistence"] }
egui_tiles = "0.14.1"
glam = "0.30.10"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp"] }
log = "0.4.29"
tobj = "4.0.3"
