[package]
name = "egui-ash"
version = "1.0.0-alpha.1"
authors = ["ORITO Itsuki <orito.itsuki@gmail.com>"]
description = "egui integration for ash (Vulkan)."
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MatchaChoco010/egui-ash"
readme = "README.md"
documentation = "https://docs.rs/egui-ash"
repository = "https://github.com/MatchaChoco010/egui-ash"
categories = ["gui"]
keywords = ["gui", "egui", "ash", "vulkan", "winit"]
include = [
  "/LICENSE-*",
  "/src/*.rs",
  "/src/shaders/spv/*.spv",
  "/Cargo.toml",
]

[features]
default = ["egui-winit/default"]
persistence = [
  "egui/persistence",
  "egui-winit/serde",
  "directories-next",
  "dep:serde",
  "ron",
]

## Underlying egui-winit features
accesskit = ["egui-winit/accesskit"]
android-game-activity = ["egui-winit/android-game-activity"]
android-native-activity = ["egui-winit/android-native-activity"]
bytemuck = ["egui-winit/bytemuck"]
clipboard = ["egui-winit/clipboard"]
links = ["egui-winit/links"]
serde = ["egui-winit/serde"]
wayland = ["egui-winit/wayland"]
x11 = ["egui-winit/x11"]

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.7"
ash = { version = "0.38.0", default-features = false }
ash-window = "0.13.0"
bytemuck = "1.25.0"
directories-next = { version = "2.0.0", optional = true }
egui = "0.33.3"
egui-winit = "0.33.3"
log = "0.4.29"
raw-window-handle = "0.6.2"
ron = { version = "0.10.1", optional = true }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug"] }
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-ash = { path = ".", features = ["persistence"] }
egui_tiles = "0.14.1"
log = "0.4.29"

[[example]]
name = "v2_simple"
path = "examples/v2_simple/main.rs"

[[example]]
name = "egui_ash_simple"
path = "examples/egui_ash_simple/main.rs"

[[example]]
name = "images"
path = "examples/images/main.rs"

[[example]]
name = "egui_ash_vulkan"
path = "examples/egui_ash_vulkan/main.rs"

[[example]]
name = "scene_view"
path = "examples/scene_view/main.rs"

[[example]]
name = "tiles"
path = "examples/tiles/main.rs"
